--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 basic_settings:
-  site_title: nils-prause.de
+  site_title: Nils-Prause.de
   site_tagline: Private Website
   site_owner: Nils Prause
   favicon_image: /images/favicon.png
